syntax = "proto3";

// Way to group multiple proto files in one object together
package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";
// Should be sub package of module mentioned in go.mod file
option go_package = "github/dutt23/bank/pb";

message CreateUserRequest {
	string username = 1;
	string fullname = 2;
	string email = 3;
	string password = 4;
}

message CreateUserResponse {
	User user = 1;
}

message LoginUserRequest {
	string username = 1;
	string password = 2;
}

message LoginUserResponse {
	User user = 1;
	string session_id = 2;
	string access_token = 3;
	google.protobuf.Timestamp access_token_expired_at = 4;
	string refresh_token = 5;
	google.protobuf.Timestamp refresh_token_expired_at = 6;
}