syntax = "proto3";

// Way to group multiple proto files in one object together
package pb;

import "rpc_user.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
// Should be sub package of module mentioned in go.mod file
option go_package = "github/dutt23/bank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Bank api";
    version: "1.3";
    contact: {
      name: "Test one";
      url: "https://github.com/Dutt23/bank";
      email: "none@example.com";
    };
  }
};
	
service Bank {
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
		    option (google.api.http) = {
			      post: "/v1/create_user"
			      body: "*"
			    };
			option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
				description: "Use this api to create a new user";
				summary: "Create new user";
			};
	}
	rpc LoginUser(LoginUserRequest) returns (LoginUserResponse){
		option (google.api.http) = {
			post: "/v1/login_user"
			body: "*"
		};
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Use this api to login a user";
			summary: "Login user";
		};
	}

	rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){
		option (google.api.http) = {
			patch: "/v1/update_user"
			body: "*"
		};
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Use this api to update a user";
			summary: "Update user";
		};
	}

}