syntax = "proto3";

// Way to group multiple proto files in one object together
package pb;

import "google/protobuf/timestamp.Proto";
// Should be sub package of module mentioned in go.mod file
option go_package = "github/dutt23/bank/pb";

message User {
	string username = 1;
	string fullname = 2;
	string email = 3;
	google.protobuf.Timestamp password_changed_at = 4;
	google.protobuf.Timestamp created_at = 5;
}